fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -36,8 +36,6 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  width: 100vw;
-  height: 100vh;
 }
 
 h1 {
